# commerce-rails

./: .audit-ignores  AGENTS.md  Cargo.toml  Justfile  MILESTONES.md  QUALITY_BACKLOG.md  README.md
.github/workflows/: ci.yml  security.yml
crates/commerce-rails-contracts/: Cargo.toml
crates/commerce-rails-contracts/src/: lib.rs
crates/commerce-rails-stripe/: Cargo.toml
crates/commerce-rails-stripe/src/: lib.rs
crates/commerce-rails-stripe/tests/: entitlement_store.rs
kb/: Home.md  INDEX.md  LOG.md
kb/Adapters/: Stripe Connect Boundary.md
kb/Architecture/: Movement Terminology.md  Operating Authority Boundary.md  Runway Commerce Rails Boundary.md  Runway Movement Boundary.md
kb/Contracts/: Commerce Rail Surface.md
kb/Contracts/Deploy Recipes/: commerce-rails-stripe@0.1.yaml
