[workspace]
resolver = "2"
members = [
    "crates/commerce-rails-contracts",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "UNLICENSED"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
